--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
     person("Antonio", "Lepore", role = c("aut")), 
     person("Alessandra", "Menafoglio", role = c("aut")),
     person("Biagio", "Palumbo", role = c("aut")),
-    person("Simone", "Vantini", role = c("aut")),
+    person("Simone", "Vantini", role = c("aut"))
     )
 Description: Provides functional control charts 
     for statistical process monitoring of functional data.
