--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_mfd_list_real_time)
 export(get_ooc)
 export(get_sof_pc_outliers)
 export(inprod_mfd)
+export(inprod_mfd_diag)
 export(is.mfd)
 export(mfd)
 export(norm.mfd)
@@ -58,4 +59,5 @@ importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,setNames)
 importFrom(stats,var)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
