--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(regr_cc_fof)
 export(regr_cc_fof_real_time)
 export(regr_cc_sof)
 export(scale_mfd)
+export(simulate_mfd)
 export(sof_pc)
 export(sof_pc_real_time)
 export(tensor_product_mfd)
@@ -49,9 +50,12 @@ import(dplyr)
 import(fda)
 import(ggplot2)
 import(parallel)
+importFrom(RSpectra,eigs_sym)
 importFrom(rlang,.data)
+importFrom(stats,approx)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
+importFrom(stats,dnorm)
 importFrom(stats,hatvalues)
 importFrom(stats,lm)
 importFrom(stats,predict)
