cv faster in sof_pc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ import(fda)
 import(ggplot2)
 import(parallel)
 importFrom(RSpectra,eigs_sym)
+importFrom(matrixStats,rowCumsums)
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
