--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: Provides functional control charts
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507> and 
     Centofanti et al. (2020) <doi:10.1080/00401706.2020.1753581>.
 Depends: fda, dplyr, ggplot2, R (>= 4.0.0)
-Imports: rlang, parallel, tidyr, patchwork, RSpectra
+Imports: rlang, parallel, tidyr, patchwork, RSpectra, matrixStats
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
