--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(regr_cc_fof)
 export(regr_cc_fof_real_time)
 export(regr_cc_sof)
 export(scale_mfd)
+export(sim_funcharts)
 export(simulate_mfd)
 export(sof_pc)
 export(sof_pc_real_time)
