--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: funcharts
 Type: Package
 Title: Functional Control Charts
-Version: 1.1.0.9000
+Version: 1.2.0
 Authors@R: c(
     person("Christian", "Capezza", 
       email = "christian.capezza@unina.it", 
@@ -17,7 +17,7 @@ Description: Provides functional control charts
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507> and 
     Centofanti et al. (2020) <doi:10.1080/00401706.2020.1753581>.
 Depends: fda, dplyr, ggplot2, R (>= 3.6.0)
-Imports: rlang, parallel, tidyr, patchwork, RSpectra, matrixStats, Matrix
+Imports: rlang, parallel, tidyr, patchwork, RSpectra, matrixStats
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
