--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_mfd_fd)
 export(get_mfd_list)
 export(get_mfd_list_real_time)
 export(get_ooc)
+export(get_outliers_mfd)
 export(get_sof_pc_outliers)
 export(inprod_mfd)
 export(inprod_mfd_diag)
