--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,13 +16,24 @@ Description: Provides functional control charts
     for statistical process monitoring of functional data, 
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507> and 
     Centofanti et al. (2020) <doi:10.1080/00401706.2020.1753581>.
-Depends: fda, dplyr, ggplot2, R (>= 3.6.0)
-Imports: rlang, parallel, tidyr, patchwork, RSpectra, matrixStats, roahd
+Depends: R (>= 3.6.0)
+Imports: 
+    fda,
+    ggplot2,
+    rlang,
+    parallel,
+    tidyr,
+    patchwork,
+    RSpectra,
+    matrixStats,
+    roahd,
+    dplyr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Suggests: 
+    covr,
     knitr,
     rmarkdown,
     testthat
