--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(rbind_mfd)
 export(regr_cc_fof)
 export(regr_cc_fof_real_time)
 export(regr_cc_sof)
+export(regr_cc_sof_real_time)
 export(scale_mfd)
 export(sim_funcharts)
 export(simulate_mfd)
@@ -59,11 +60,14 @@ importFrom(stats,approx)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,dnorm)
+importFrom(stats,formula)
 importFrom(stats,hatvalues)
 importFrom(stats,lm)
+importFrom(stats,model.matrix)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
+importFrom(stats,rstandard)
 importFrom(stats,setNames)
 importFrom(stats,var)
 importFrom(tidyr,drop_na)
