plot_bifd allows contour/persp, simulation much more general

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,9 @@ import(ggplot2)
 import(parallel)
 importFrom(RSpectra,eigs_sym)
 importFrom(matrixStats,rowCumsums)
+importFrom(rgl,mfrow3d)
+importFrom(rgl,open3d)
+importFrom(rgl,persp3d)
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
@@ -69,6 +72,7 @@ importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,rstandard)
 importFrom(stats,setNames)
+importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
