--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     RSpectra,
     matrixStats,
     roahd,
-    dplyr
+    dplyr,
+    rgl
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
