--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,10 +54,9 @@ import(fda)
 import(ggplot2)
 import(parallel)
 importFrom(RSpectra,eigs_sym)
+importFrom(graphics,par)
 importFrom(matrixStats,rowCumsums)
-importFrom(rgl,mfrow3d)
-importFrom(rgl,open3d)
-importFrom(rgl,persp3d)
+importFrom(plot3D,persp3D)
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
