--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,7 @@ Imports:
     RSpectra,
     matrixStats,
     roahd,
-    dplyr,
-    plot3D
+    dplyr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
