--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,8 +55,8 @@ import(ggplot2)
 import(parallel)
 importFrom(RSpectra,eigs_sym)
 importFrom(graphics,par)
+importFrom(graphics,persp)
 importFrom(matrixStats,rowCumsums)
-importFrom(plot3D,persp3D)
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
