updated plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(control_charts_sof_pc_real_time)
 export(data_sim_mfd)
 export(fof_pc)
 export(fof_pc_real_time)
-export(geom_mfd)
 export(get_mfd_array)
 export(get_mfd_array_real_time)
 export(get_mfd_df)
@@ -24,6 +23,7 @@ export(get_sof_pc_outliers)
 export(inprod_mfd)
 export(inprod_mfd_diag)
 export(is.mfd)
+export(lines_mfd)
 export(mfd)
 export(norm.mfd)
 export(pca_mfd)
@@ -57,6 +57,7 @@ importFrom(RSpectra,eigs_sym)
 importFrom(graphics,par)
 importFrom(graphics,persp)
 importFrom(matrixStats,rowCumsums)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
@@ -73,5 +74,6 @@ importFrom(stats,rstandard)
 importFrom(stats,setNames)
 importFrom(stats,uniroot)
 importFrom(stats,var)
+importFrom(stringr,str_count)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
