--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Authors@R: c(
 Description: Provides functional control charts 
     for statistical process monitoring of functional data, 
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507> and 
-    Centofanti et al. (2020) <doi:10.1080/00401706.2020.1753581>.
+    Centofanti et al. (2021) <doi:10.1080/00401706.2020.1753581>.
+    The package is thoroughly illustrated in the paper of 
+    Capezza et al (2023) <doi:10.1080/00224065.2023.2219012>
 Depends: R (>= 3.6.0)
 Imports: 
     fda,
@@ -41,3 +43,4 @@ Suggests:
 VignetteBuilder: knitr
 URL: https://github.com/unina-sfere/funcharts
 BugReports: https://github.com/unina-sfere/funcharts/issues
+Roxygen: list(markdown = TRUE)
