--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: funcharts
 Type: Package
 Title: Functional Control Charts
-Version: 1.3.2
+Version: 1.4.2.9000
 Authors@R: c(
     person("Christian", "Capezza", 
       email = "christian.capezza@unina.it", 
@@ -36,7 +36,9 @@ Imports:
     fda.usc,
     rrcov,
     rofanova,
-    Matrix
+    Matrix,
+    MASS,
+    mvtnorm
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
