--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: funcharts
 Type: Package
 Title: Functional Control Charts
-Version: 1.4.1
+Version: 1.4.1.9000
 Authors@R: c(
     person("Christian", "Capezza", 
       email = "christian.capezza@unina.it", 
@@ -14,8 +14,9 @@ Authors@R: c(
     )
 Description: Provides functional control charts 
     for statistical process monitoring of functional data, 
-    using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507> and 
-    Centofanti et al. (2021) <doi:10.1080/00401706.2020.1753581>.
+    using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507>, 
+    Centofanti et al. (2021) <doi:10.1080/00401706.2020.1753581>,
+    and Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>.
     The package is thoroughly illustrated in the paper of 
     Capezza et al (2023) <doi:10.1080/00224065.2023.2219012>.
 Depends: 
@@ -38,11 +39,13 @@ Imports:
     rofanova,
     Matrix,
     MASS,
-    mvtnorm
+    mvtnorm,
+    Rcpp,
+    Rfast
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Suggests: 
     covr,
     knitr,
@@ -52,3 +55,6 @@ VignetteBuilder: knitr
 URL: https://github.com/unina-sfere/funcharts
 BugReports: https://github.com/unina-sfere/funcharts/issues
 Roxygen: list(markdown = TRUE)
+LinkingTo: 
+    Rcpp,
+    RcppArmadillo
