--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Description: Provides functional control charts
     for statistical process monitoring of functional data, 
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507>, 
     Centofanti et al. (2021) <doi:10.1080/00401706.2020.1753581>,
-    and Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>.
+    Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>,
+    Capezza et al. (2024) <doi:10.1080/00224065.2024.2383674>,
+    Centofanti et al. (2022) <arXiv:2205.06256>.
     The package is thoroughly illustrated in the paper of 
     Capezza et al (2023) <doi:10.1080/00224065.2023.2219012>.
 Depends: 
@@ -39,12 +41,11 @@ Imports:
     rrcov,
     rofanova,
     Matrix,
-    mvtnorm,
     Rcpp,
     Rfast,
     mgcv, 
     scam, 
-    spatstat.explore, 
+    spatstat.univar, 
     methods
 License: GPL-3
 Encoding: UTF-8
