--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,7 @@ export(regr_cc_sof_real_time)
 export(rpca_mfd)
 export(scale_mfd)
 export(sim_funcharts)
-export(simulate_data)
+export(simulate_data_FRTM)
 export(simulate_mfd)
 export(sof_pc)
 export(sof_pc_real_time)
