cor cov mean for mfd class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(control_charts_pca)
 export(control_charts_pca_mfd_real_time)
 export(control_charts_sof_pc)
 export(control_charts_sof_pc_real_time)
+export(cor_mfd)
+export(cov_mfd)
 export(data_sim_mfd)
 export(fof_pc)
 export(fof_pc_real_time)
@@ -37,6 +39,7 @@ export(inprod_mfd_diag)
 export(is.mfd)
 export(lines_mfd)
 export(mFPCA)
+export(mean_mfd)
 export(mfd)
 export(norm.mfd)
 export(par.FDTW)
