--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,8 +46,7 @@ Imports:
     mgcv, 
     scam, 
     spatstat.univar, 
-    methods,
-    abind
+    methods
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
