added predict pca function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(plot,FRTM_PhaseI)
 S3method(plot,FRTM_PhaseII)
 S3method(plot,mFPCA)
 S3method(plot,mfd)
+S3method(predict,pca_mfd)
 export(AMFCC_PhaseI)
 export(AMFCC_PhaseII)
 export(AMFEWMA_PhaseI)
