--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,4 +93,5 @@ importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(rlang,":=")
 importFrom(robustbase,Mwgt)
+importFrom(stats,nobs)
 useDynLib(funcharts, .registration = TRUE)
