Addded simulation function for RoMFCC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(rpca_mfd)
 export(scale_mfd)
 export(sim_funcharts)
 export(simulate_data_FRTM)
+export(simulate_data_RoMFCC)
 export(simulate_mfd)
 export(sof_pc)
 export(sof_pc_real_time)
