--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: funcharts
 Type: Package
 Title: Functional Control Charts
-Version: 1.7.0
+Version: 1.8.0
 Authors@R: c(
     person("Christian", "Capezza", 
       email = "christian.capezza@unina.it", 
       role = c("cre","aut")),
     person("Fabio", "Centofanti", role = c("aut")), 
+    person("Davide", "Forcina", role = c("aut")), 
     person("Antonio", "Lepore", role = c("aut")), 
     person("Biagio", "Palumbo", role = c("aut")),
     person("Alessandra", "Menafoglio", role = c("ctb")),
@@ -16,35 +17,33 @@ Description: Provides functional control charts
     for statistical process monitoring of functional data, 
     using the methods of Capezza et al. (2020) <doi:10.1002/asmb.2507>, 
     Centofanti et al. (2021) <doi:10.1080/00401706.2020.1753581>,
-    Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>,
     Capezza et al. (2024) <doi:10.1080/00224065.2024.2383674>,
-    Centofanti et al. (2022) <doi:10.48550/arXiv.2205.06256>.
+    Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>,
+    Centofanti et al. (2025) <doi:10.1080/00224065.2024.2430978>,
+    Capezza et al. (2025) <doi:arXiv:2410.20138>.
     The package is thoroughly illustrated in the paper of 
     Capezza et al (2023) <doi:10.1080/00224065.2023.2219012>.
 Depends: 
     R (>= 3.6.0), 
     robustbase
 Imports: 
+    dplyr,
     ggplot2,
-    rlang,
+    patchwork,
     parallel,
     tidyr,
-    patchwork,
-    RSpectra,
-    matrixStats,
-    MASS, 
-    roahd,
-    dplyr,
-    stringr,
+    Rcpp,
     fda,
     fda.usc,
+    roahd,
     rrcov,
-    rofanova,
-    Matrix,
-    Rcpp,
     Rfast,
     mgcv, 
     scam, 
+    fdapace,
+    RSpectra,
+    MASS, 
+    rofanova,
     spatstat.univar, 
     methods
 License: GPL-3
@@ -55,7 +54,8 @@ Suggests:
     covr,
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    sn
 VignetteBuilder: knitr
 URL: https://github.com/unina-sfere/funcharts
 BugReports: https://github.com/unina-sfere/funcharts/issues
