--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(AMFCC_PhaseI)
 export(AMFCC_PhaseII)
 export(AMFEWMA_PhaseI)
 export(AMFEWMA_PhaseII)
+export(FMRCC_PhaseI)
+export(FMRCC_PhaseII)
 export(FRTM_PhaseI)
 export(FRTM_PhaseII)
 export(OEBFDTW)
@@ -36,6 +38,7 @@ export(control_charts_sof_pc_real_time)
 export(cor_mfd)
 export(cov_mfd)
 export(data_sim_mfd)
+export(estimate_mixture)
 export(fof_pc)
 export(fof_pc_real_time)
 export(functional_filter)
@@ -84,15 +87,17 @@ export(scale_mfd)
 export(sim_funcharts)
 export(simulate_data_FRTM)
 export(simulate_data_RoMFCC)
+export(simulate_data_fmrcc)
 export(simulate_mfd)
 export(sof_pc)
 export(sof_pc_real_time)
 export(tensor_product_mfd)
 export(times_mfd)
 export(which_ooc)
+import(fdapace)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
-importFrom(rlang,":=")
 importFrom(robustbase,Mwgt)
 importFrom(stats,nobs)
+importFrom(stats,predict)
 useDynLib(funcharts, .registration = TRUE)
