--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Description: Provides functional control charts
     Capezza et al. (2024) <doi:10.1080/00224065.2024.2383674>,
     Capezza et al. (2024) <doi:10.1080/00401706.2024.2327346>,
     Centofanti et al. (2025) <doi:10.1080/00224065.2024.2430978>,
-    Capezza et al. (2025) <doi:arXiv:2410.20138>.
+    Capezza et al. (2025) <doi:10.48550/arXiv.2410.20138>.
     The package is thoroughly illustrated in the paper of 
     Capezza et al (2023) <doi:10.1080/00224065.2023.2219012>.
 Depends: 
