--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(FMRCC_PhaseII)
 export(FRTM_PhaseI)
 export(FRTM_PhaseII)
 export(OEBFDTW)
+export(RoAMFEWMA_PhaseI)
+export(RoAMFEWMA_PhaseII)
 export(RoMFCC_PhaseI)
 export(RoMFCC_PhaseII)
 export(RoMFDI)
